--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMqjhpq2Sn2Y2NM8TJQwpGZ",
+      "authorship_tag": "ABX9TyOjbEozHeOvWLHVAYj3U4cS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,7 +103,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "54a8hhq8l2AK"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "HrCBq56i3sVW"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
       "metadata": {
         "id": "e1yPmU17vYrs"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,11 +258,10 @@
         "id": "tfnZyAI5nVL0",
         "outputId": "96d81195-51fd-4c7c-f1ae-cf6a5a8a7e52",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -296,11 +295,10 @@
         "id": "ND78M8VHnj7w",
         "outputId": "3d9c5e24-92c0-4d61-aeb6-ea50bc70ed0f",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -345,7 +343,7 @@
       "metadata": {
         "id": "-04BquM1nbe4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -366,11 +364,10 @@
         "id": "uLYCNOICACwv",
         "outputId": "58649d30-8baf-4ca6-fdaf-329be011db75",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -507,7 +504,7 @@
       "metadata": {
         "id": "QW0r77mzsKad"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +537,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +563,7 @@
       "metadata": {
         "id": "uazDFnOxHTvq"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -596,7 +593,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,7 +682,7 @@
       "metadata": {
         "id": "iBDqtgUpOBQG"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -744,7 +741,7 @@
       "metadata": {
         "id": "WcuFhCxbL1aK"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -882,7 +879,7 @@
       "metadata": {
         "id": "nh0vG1bqPtWf"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -897,7 +894,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -948,7 +945,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1024,7 +1021,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1063,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1124,7 +1121,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1163,7 +1160,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1202,7 +1199,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1305,7 +1302,7 @@
       "metadata": {
         "id": "3j6coSQ3KXoY"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1364,7 +1361,7 @@
       "metadata": {
         "id": "E2u7a6UtEqVi"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1390,7 +1387,7 @@
       "metadata": {
         "id": "GtnW05216lRj"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1417,7 +1414,7 @@
       "metadata": {
         "id": "RyqvwX3m71Y8"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1430,7 +1427,7 @@
       "metadata": {
         "id": "ekvg5Wed74jn"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1446,7 +1443,7 @@
           "height": 349
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1482,7 +1479,7 @@
           "height": 354
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1553,18 +1550,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "What if the decoder could choose one (or more) of the encoder’s hidden states to use instead of being forced to stick with only the final one?\n",
-        "\n",
-        "That would surely give it more flexibility to use the hidden state that’s more\n",
-        "useful at a given step of the target-sequence generation.\n",
-        "\n",
-        "In other words, we can say that the decoder is paying attention\n",
-        "to different elements in the source sequence. That’s the famous\n",
-        "attention mechanism in a nutshell.\n",
-        "\n",
-        "Let’s take an example of English and French sentence and build a matrix with English words (the source sequence) as columns and French words (the target sequence) as rows.\n",
-        "\n",
-        "The entries in this matrix represent our guesses of how much attention the decoder is paying to each English word in order to generate a given French word."
+        "We need to find a way to inform the model about the position of every data point\n",
+        "such that it knows the order of the data points. In other words, we need to\n",
+        "generate a unique value for each position in the input.\n",
+        "\n"
       ],
       "metadata": {
         "id": "cR65I4QTTxUE"
