--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPMESzsDoSNs9Num5cwyEqj",
+      "authorship_tag": "ABX9TyMUuGUpD4mRXKqvCgKD+SNw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,7 +98,7 @@
       ],
       "metadata": {
         "id": "wlXOl_Holz6M",
-        "outputId": "adc7ddcc-53de-40c4-cd98-dff53c7a5ef9",
+        "outputId": "e997e18e-4291-44b0-b94f-4aa0c963a40e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -256,7 +256,7 @@
       ],
       "metadata": {
         "id": "tfnZyAI5nVL0",
-        "outputId": "9052090b-824d-48de-e171-b7819461c92f",
+        "outputId": "b827f36b-eac4-43a2-a106-91fa1cff8212",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -294,7 +294,7 @@
       ],
       "metadata": {
         "id": "ND78M8VHnj7w",
-        "outputId": "60f5ea9b-edcf-4ccc-850e-dce7db00c4f8",
+        "outputId": "7b35be1a-4f11-480c-b4ac-c2310c841d6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
@@ -364,7 +364,7 @@
       ],
       "metadata": {
         "id": "uLYCNOICACwv",
-        "outputId": "074d7131-be01-48fe-926b-c534f992be60",
+        "outputId": "c5e2bab8-4fb2-48cb-e1aa-17dc580e8963",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 178
@@ -535,7 +535,7 @@
       ],
       "metadata": {
         "id": "0TL0qt6iG4j2",
-        "outputId": "35123842-d403-4475-db26-1931b3e22e55",
+        "outputId": "db60d722-1464-4394-f070-023973b25473",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -591,7 +591,7 @@
       ],
       "metadata": {
         "id": "-2xSmTDYHlTL",
-        "outputId": "b23f5fe6-3c14-45c2-cd3a-bf7898a15bbc",
+        "outputId": "58aa8e69-676b-42db-fef3-60e3629f7907",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -892,7 +892,7 @@
       ],
       "metadata": {
         "id": "Iuq-8GSWQXlP",
-        "outputId": "055ad0df-7f85-4187-a64e-cce26a8c276e",
+        "outputId": "57eb3fdf-5d77-4622-c255-e3e31a6e1d94",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -943,7 +943,7 @@
       ],
       "metadata": {
         "id": "v8JKnoukC_Eo",
-        "outputId": "f527ecbb-b0e3-4cbd-e42b-fdf934f962a0",
+        "outputId": "963cd11f-6507-40ba-b019-bd115b2ab012",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1019,7 +1019,7 @@
       ],
       "metadata": {
         "id": "HUPFmXhccWsA",
-        "outputId": "293bbadd-c7e6-44d0-be4b-bc5492f80ea3",
+        "outputId": "18eeed9d-c45c-4b88-8811-6e8de1a21726",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1061,7 +1061,7 @@
       ],
       "metadata": {
         "id": "4eWomOyMdUNZ",
-        "outputId": "73b216b9-e97e-4072-8405-0fb7f1b2a09e",
+        "outputId": "848b748c-d17e-4eeb-c9fc-b060632bf8ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1119,7 +1119,7 @@
       ],
       "metadata": {
         "id": "yEVO9fKeeHm9",
-        "outputId": "342916e1-8e4e-4ca3-808a-ec107b775019",
+        "outputId": "f848835e-41af-4a97-e9e3-21229b4c22c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1158,7 +1158,7 @@
       ],
       "metadata": {
         "id": "J57OA_2Yf1Lk",
-        "outputId": "fa9163a2-ad8b-41b4-f86e-fca577e9fa85",
+        "outputId": "5a53e4ee-5495-42cd-f23c-73a47cf8c2dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1197,7 +1197,7 @@
       ],
       "metadata": {
         "id": "U7THbRPfR4tO",
-        "outputId": "50ebbb67-5485-47c4-bda5-c69f079156fe",
+        "outputId": "5e0839cd-866c-4261-a4c9-3b2a07065dcd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1338,7 +1338,7 @@
       ],
       "metadata": {
         "id": "uMJ1tByQ6Wff",
-        "outputId": "e788ebb0-023b-4326-9ac6-8fd59dc2ad80",
+        "outputId": "147cfce9-4990-4a91-b391-e32aa7839e48",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1453,7 +1453,7 @@
       ],
       "metadata": {
         "id": "P2NfuqRcITgD",
-        "outputId": "0908d7e6-2447-44f4-f6ae-c84b1cb1250f",
+        "outputId": "6e005f2c-2744-4f43-dbc4-21a22a314d17",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 349
@@ -1489,7 +1489,7 @@
       ],
       "metadata": {
         "id": "ITjKDaEHKhkv",
-        "outputId": "503d955f-fe17-4bee-b246-08f1355e7ab4",
+        "outputId": "f776bc2c-08f3-4322-ff45-4d4c2da1b9e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 354
@@ -1654,7 +1654,7 @@
       ],
       "metadata": {
         "id": "E18489UJVkUp",
-        "outputId": "2e90e1e0-4181-44b0-f5f1-56ddde3100d2",
+        "outputId": "f2ca9dc3-2c4e-447a-9306-46fc47b08a9d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 392
@@ -1710,7 +1710,7 @@
       ],
       "metadata": {
         "id": "hI-idV9NXCsC",
-        "outputId": "c31bb903-2f41-4ab5-92c5-9115a45d5c65",
+        "outputId": "89311248-d357-46b8-aa29-6a11a0215dc2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 402
@@ -1772,7 +1772,7 @@
       "metadata": {
         "id": "TLc_8RB0f-6r"
       },
-      "execution_count": 43,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1782,13 +1782,13 @@
       ],
       "metadata": {
         "id": "rAsohSqdisn7",
-        "outputId": "1598018f-ffa7-4436-fa80-c4364accaeb7",
+        "outputId": "b1c9ad70-a4cf-4bec-cb81-ea83b7b45128",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 501
         }
       },
-      "execution_count": 44,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1825,12 +1825,12 @@
       ],
       "metadata": {
         "id": "9ltrIBPjj9bC",
-        "outputId": "67af167d-c6e6-4c77-97e2-1059e49565ab",
+        "outputId": "c294b458-1ad3-467e-b89a-271181456f8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1843,7 +1843,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 35
         }
       ]
     },
@@ -1891,7 +1891,7 @@
       "metadata": {
         "id": "d9mQsNsxeyaN"
       },
-      "execution_count": 46,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -1903,13 +1903,13 @@
       ],
       "metadata": {
         "id": "spphJTZck1ql",
-        "outputId": "2efecbdd-ec26-4002-ce42-cc8ca0521e9c",
+        "outputId": "449f226f-77e2-4b51-de3e-98b9a8441239",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 644
         }
       },
-      "execution_count": 47,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1942,12 +1942,257 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class PositionalEncoding(nn.Module):\n",
+        "  def __init__(self, max_len, d_model):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.d_model = d_model\n",
+        "    position_encoding = torch.zeros(max_len, d_model)\n",
+        "    position = torch.arange(0, max_len).float().unsqueeze(1)\n",
+        "    angular_speed = torch.exp(torch.arange(0, d_model, 2).float() * (-np.log(10000.0) / d_model))\n",
+        "\n",
+        "    # even dimensions\n",
+        "    position_encoding[:, 0::2] = torch.sin(angular_speed * position)\n",
+        "    # odd dimensions\n",
+        "    position_encoding[:, 1::2] = torch.cos(angular_speed * position)\n",
+        "    # define an attribute of the module\n",
+        "    self.register_buffer(\"position_encoding\", position_encoding.unsqueeze(0))\n",
+        "\n",
+        "  def forward(self, X):\n",
+        "    # x is N, L, D\n",
+        "    # pe is 1, maxlen, D\n",
+        "    # scaling the input before adding the positional encoding\n",
+        "    scaled_x = X * np.sqrt(self.d_model)\n",
+        "    encoded = scaled_x + self.position_encoding[:, :X.size(1), :]\n",
+        "    return encoded"
+      ],
       "metadata": {
         "id": "Scp83P7hmo9S"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let’s create an instance of the positional encoding class."
+      ],
+      "metadata": {
+        "id": "6r1GhGykhFF2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "position_encoding = PositionalEncoding(2, 2)\n",
+        "list(position_encoding.parameters()), position_encoding.state_dict()"
+      ],
+      "metadata": {
+        "id": "f5889E8zhFp3",
+        "outputId": "774d9175-4bb4-4f02-b6a2-895251e90232",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "([],\n",
+              " OrderedDict([('position_encoding', tensor([[[0.0000, 1.0000],\n",
+              "                        [0.8415, 0.5403]]]))]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The registered buffer can be accessed just like any other attribute:"
+      ],
+      "metadata": {
+        "id": "0Cpj14VDhX9c"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "position_encoding.position_encoding"
+      ],
+      "metadata": {
+        "id": "nnU67RrWhYZX",
+        "outputId": "98d7fb2b-49b5-43f4-b2bc-580fff30cf72",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0.0000, 1.0000],\n",
+              "         [0.8415, 0.5403]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now, let’s see what happens if we add the positional encoding to a source\n",
+        "sequence:"
+      ],
+      "metadata": {
+        "id": "9hLyWgZohfLI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "source_seq # 1, L, D"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oYOWFGmDhfr2",
+        "outputId": "025ee63a-87a0-4990-8627-77d55a073a4a"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1., -1.],\n",
+              "         [-1.,  1.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "source_seq + position_encoding.position_encoding"
+      ],
+      "metadata": {
+        "id": "8L7Mv_g9htTE",
+        "outputId": "622cff3d-6408-46eb-e29e-37582000fc6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1.0000,  0.0000],\n",
+              "         [-0.1585,  1.5403]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It turns out, the original coordinates were somewhat crowded-out by the addition of the positional encoding (especially the first row). This may happen if the data points have values roughly in the same range as the positional encoding.\n",
+        "\n",
+        "Unfortunately, this is fairly common: Both standardized inputs and word\n",
+        "embeddings are likely to have most of their\n",
+        "values inside the `[-1, 1]` range of the positional encoding.\n",
+        "\n",
+        "How can we handle it then?\n",
+        "\n",
+        "That’s what the scaling in the `forward()` method is for: It’s as if we were \"reversing the standardization\" of the inputs (using a standard deviation equal to the square root of their dimensionality) to retrieve the hypothetical \"raw\" inputs.\n",
+        "\n",
+        "$$\n",
+        "\\Large\n",
+        "\\text{standardized}\\ x = \\frac{\\text{\"raw\"}\\ x}{\\sqrt{d_x}} \\implies \\text{\"raw\"} x = \\sqrt{d_x}\\ \\text{standardized}\\ x\n",
+        "$$\n",
+        "\n",
+        "In our example, the dimensionality is two (coordinates), so the inputs are going to\n",
+        "be scaled by the square root of two:"
+      ],
+      "metadata": {
+        "id": "ZMG9WNxbiiOe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "position_encoding(source_seq)"
+      ],
+      "metadata": {
+        "id": "5g6-OYhxpcoa",
+        "outputId": "edcf5cda-8db2-4e62-cd16-c0d94cfed3a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[-1.4142, -0.4142],\n",
+              "         [-0.5727,  1.9545]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For\n",
+        "inputs with many dimensions, the effect will be much more pronounced: A 300-\n",
+        "dimension embedding will have a scaling factor around 17, for example.\n",
+        "\n",
+        "Left unchecked, yes, it could be bad for the model. That’s why we’ll pull off yet another normalization trick: layer normalization.\n",
+        "\n",
+        "For now, scaling the coordinates by the square root of two isn’t going to be an issue, so we can move on and integrate positional encoding into our model."
+      ],
+      "metadata": {
+        "id": "kukBsh2OpqZK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Encoder + Decoder + PE"
+      ],
+      "metadata": {
+        "id": "fVaa0jRJr1zJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "kmT5IluOr6gs"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1981,27 +2226,10 @@
         "optimizer = optim.Adam(model.parameters(), lr=0.01)"
       ],
       "metadata": {
-        "id": "QGFMTnVT2pCb",
-        "outputId": "bc527d55-ce99-486d-8655-f56cbbcfee99",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 235
-        }
+        "id": "QGFMTnVT2pCb"
       },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-33-e530eca75307>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmanual_seed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m23\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mencoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mdecoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDecoderAttention\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhidden_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: Encoder.__init__() got an unexpected keyword argument 'hidden_dim'"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
