--- a/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-III-NLP/03_self_attention.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNIc0W1s57OcqjTge0I1lC5",
+      "authorship_tag": "ABX9TyMf9lOtLSD/aQlMcjJueARZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,7 +103,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "54a8hhq8l2AK"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "HrCBq56i3sVW"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
       "metadata": {
         "id": "e1yPmU17vYrs"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -262,7 +262,7 @@
           "height": 295
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -300,7 +300,7 @@
           "height": 295
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -345,7 +345,7 @@
       "metadata": {
         "id": "-04BquM1nbe4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -370,7 +370,7 @@
           "height": 178
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -507,7 +507,7 @@
       "metadata": {
         "id": "QW0r77mzsKad"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -540,7 +540,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +566,7 @@
       "metadata": {
         "id": "uazDFnOxHTvq"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -596,7 +596,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,7 +685,7 @@
       "metadata": {
         "id": "iBDqtgUpOBQG"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -744,7 +744,7 @@
       "metadata": {
         "id": "WcuFhCxbL1aK"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -882,7 +882,7 @@
       "metadata": {
         "id": "nh0vG1bqPtWf"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -897,7 +897,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -948,7 +948,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1024,7 +1024,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1066,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1124,7 +1124,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1163,7 +1163,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1202,7 +1202,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1305,7 +1305,7 @@
       "metadata": {
         "id": "3j6coSQ3KXoY"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1343,7 +1343,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1377,7 +1377,7 @@
       "metadata": {
         "id": "E2u7a6UtEqVi"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1403,7 +1403,7 @@
       "metadata": {
         "id": "GtnW05216lRj"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1430,7 +1430,7 @@
       "metadata": {
         "id": "RyqvwX3m71Y8"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1443,7 +1443,7 @@
       "metadata": {
         "id": "ekvg5Wed74jn"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1459,7 +1459,7 @@
           "height": 349
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1495,7 +1495,7 @@
           "height": 354
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1660,7 +1660,7 @@
           "height": 392
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1716,7 +1716,7 @@
           "height": 402
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1772,7 +1772,7 @@
       "metadata": {
         "id": "TLc_8RB0f-6r"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1788,7 +1788,7 @@
           "height": 501
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1830,7 +1830,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1891,7 +1891,7 @@
       "metadata": {
         "id": "d9mQsNsxeyaN"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1909,7 +1909,7 @@
           "height": 644
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1970,7 +1970,7 @@
       "metadata": {
         "id": "Scp83P7hmo9S"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1995,7 +1995,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2032,7 +2032,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2069,7 +2069,7 @@
         "id": "oYOWFGmDhfr2",
         "outputId": "a488bb8a-249d-4a03-ce9b-8c599383fd72"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2096,7 +2096,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2148,7 +2148,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2218,7 +2218,7 @@
       "metadata": {
         "id": "rR38t3Q0nObr"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2244,7 +2244,7 @@
       "metadata": {
         "id": "dM58qxlrpB7S"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2282,7 +2282,7 @@
       "metadata": {
         "id": "QGFMTnVT2pCb"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2295,7 +2295,7 @@
       "metadata": {
         "id": "Y5tVE_ar3RV2"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2311,7 +2311,7 @@
           "height": 349
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2357,7 +2357,7 @@
           "height": 354
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2423,7 +2423,7 @@
           "height": 594
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2464,7 +2464,7 @@
           "height": 594
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2502,7 +2502,7 @@
           "height": 594
         }
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2527,9 +2527,85 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "We used the same dataset of colored squares, but this time we\n",
+        "focused on predicting the coordinates of the last two corners (target sequence)\n",
+        "given the coordinates of the first two corners (source sequence).\n",
+        "\n",
+        "In the beginning,\n",
+        "we used familiar recurrent neural networks to build an encoder-decoder\n",
+        "architecture. Then, we progressively built on top of it by using (cross-)attention,\n",
+        "self-attention, and positional encoding."
+      ],
       "metadata": {
         "id": "iyOE8_QKy87w"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Data Preparation"
+      ],
+      "metadata": {
+        "id": "RHRpVvNdM9Wa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The training set has the full sequences as features, while the test set has only the source sequences as features:"
+      ],
+      "metadata": {
+        "id": "T_safGy2M_UQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Training set\n",
+        "points, directions = generate_sequences(n=256, seed=13)\n",
+        "\n",
+        "full_train = torch.as_tensor(points).float()\n",
+        "target_train = full_train[:, 2:]\n",
+        "\n",
+        "train_data = TensorDataset(full_train, target_train)\n",
+        "\n",
+        "generator = torch.Generator()\n",
+        "train_loader = DataLoader(train_data, batch_size=16, shuffle=True, generator=generator)\n",
+        "\n",
+        "\n",
+        "# Validation / Test Set\n",
+        "test_points, test_directions = generate_sequences(seed=19)\n",
+        "\n",
+        "full_test = torch.as_tensor(test_points).float()\n",
+        "source_test = full_test[:, :2]\n",
+        "target_test = full_test[:, 2:]\n",
+        "\n",
+        "test_data = TensorDataset(source_test, target_test)\n",
+        "\n",
+        "generator = torch.Generator()\n",
+        "test_loader = DataLoader(test_data, batch_size=16)"
+      ],
+      "metadata": {
+        "id": "fVWyWmhPNEkb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Model Assembly"
+      ],
+      "metadata": {
+        "id": "vZ-s9apOV4lp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Jle1h8rkV5Tz"
       }
     }
   ]
